# ReLib

./: .clangd  .gitignore  CMakeLists.txt  INFO.txt  README.md  TODO.txt  clangdconf.sh  cmakeconf.sh
src/: main.cpp
src/app/: imagescene.cpp  imagescene.hpp  imageview.cpp  imageview.hpp  librarymodel.cpp  librarymodel.hpp  librarymodelproxy.cpp  librarymodelproxy.hpp  libraryview.cpp  libraryview.hpp  libraryviewdelegate.cpp  libraryviewdelegate.hpp  searchcompleter.cpp  searchcompleter.hpp  searchlineedit.cpp  searchlineedit.hpp  searchplaintextedit.cpp  searchplaintextedit.hpp
src/base/: clipboard.cpp  clipboard.hpp  dbmanager.cpp  dbmanager.hpp  dbworker.cpp  dbworker.hpp  imageworker.cpp  imageworker.hpp  log.cpp  log.hpp  manga.cpp  manga.hpp  mangatextedit.cpp  mangatextedit.hpp  settings.cpp  settings.hpp  shortcuts.cpp  shortcuts.hpp  zipmanager.cpp  zipmanager.hpp  zipworker.cpp  zipworker.hpp
src/gui/: logdialog.cpp  logdialog.hpp  mainwindow.cpp  mainwindow.hpp  mangainfodialog.cpp  mangainfodialog.hpp
src/gui/theme/: mouse-next-prev.qrc
src/gui/ui/: logdialog.ui  mainwindow.ui  mangainfodialog.ui
src/utils/: defs.hpp  fs.cpp  fs.hpp  json.cpp  json.hpp  str.cpp  str.hpp  zip.cpp  zip.hpp
